--- a/google.html
+++ b/google.html
@@ -1,7 +1,7 @@
 
 <html style="text-align:center; ">
       <head>
-          <title>New Tab</title>
+          <title>New tab</title>
           <script>
             function x()
             {
